Devops-Ass1-main/session-12-ingress-configmaps-secrets/03-ingress/ingress-tls.yaml
# Hybrid routing (host + path) with TLS termination using the vansh-tls-cert secret
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vansh-ingress-tls
  labels:
    app: vanshapp
    owner: vansh
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - portal.vansh.local
        - api.vansh.local
      secretName: vansh-tls-cert
  rules:
    - host: portal.vansh.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vanshapp-frontend
                port:
                  number: 80
    - host: api.vansh.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: vanshapp-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vanshapp-backend
                port:
                  number: 8080
